feat: add product composition management with CRUD operations and UI integration